syntax = "proto3";

option csharp_namespace = "Percolator.Protobuf.Introduce";

package introduce;

message IntroduceMessage {  
  message IntroduceRequest {
    message Payload {
      optional bytes identityKey = 1;
      optional bytes ephemeralKey = 2;
      optional int64 timeStampUnixUtcMs = 3;
      optional bytes sourceIp = 4;
      optional string preferredNickname = 5;
    }
    optional Payload payload = 1;
    //signed with identity key
    bytes payloadSignature = 2;    
  }
  message IntroduceReply {
    message Proceed {
      message Payload {
        optional bytes identityKey = 1;
        optional bytes ephemeralKey = 2;
        optional int64 timeStampUnixUtcMs = 3;
        optional bytes sourceIp = 4;
        optional string preferredNickname = 5;
      }
      optional Payload payload = 1;
      //signed with the identity key
      optional bytes payloadSignature = 2;
    }

    message Busy {
      optional int64 notBeforeUnixUtcMs = 1;
    }
    oneof responseType {
      Proceed proceed = 1;
      Busy busy = 2;
    }
  }
  message ChatMessage {
    //this is double ratchet data, and includes an unencrypted header
    optional bytes data = 1;
  }
  oneof messageType {
      IntroduceRequest introduceRequest = 1;
      IntroduceReply introduceReply = 2;
      ChatMessage chatMessage = 3;
  } 
}

message AssociatedData {
  optional bytes identityKey = 1;
  optional bytes sourceIp = 2;
  optional int64 timeStampUnixUtcMs = 3;
}


